--- a/thesis/thesis.tex
+++ b/thesis/thesis.tex
@@ -1,7 +1,9 @@
 \documentclass[letterpaper,12pt,fleqn]{article}
 \usepackage{matharticle}
 \usepackage{graphtheory}
+\usepackage{flowchart}
 \usepackage{url}
+\usetikzlibrary{arrows}
 \pagestyle{plain}
 \newcommand{\sR}{\mathscr{R}}
 \newcommand{\coloring}[1]{\(#1\)-coloring}
@@ -10,9 +12,11 @@
 \newcommand{\X}{\chi}
 \renewcommand{\d}{\delta}
 \newcommand{\D}{\Delta}
+\renewcommand{\l}{\lambda}
 \newcommand{\SG}{\mathscr{G}}
 \newcommand{\BO}{\mathcal{O}}
 \newtheorem{proposition}{Proposition}
+\allowdisplaybreaks
 \begin{document}
 
 \title{Determining a Graph's Chromatic Number for Part Consolidation in Axiomatic Design}
