--- a/thesis/thesis.bib
+++ b/thesis/thesis.bib
@@ -34,3 +34,14 @@ year={2001}
  address = {New York, NY, USA},
  keywords = {analysis of algorithms, graph manipulation, graphs},
 } 
+
+@article{cavallaro,
+  author = {Behdad, Sara and Gopalakrishnan, Praveen Kumare and Jahanbekam, Sogol and Cavallaro, Jeffery},
+  title = {A Graph Coloring Technique for Identifying the Minimum Number of Parts for Physical Integration in
+  Product Design},
+  journal = {Proceedings of the ASME 2019 International Design Engineering Technical Conferences \& Computers and
+  Information in Engineering Conference},
+  volume =       {},
+  year =         {2019},
+  number =       {DETC2018-98251},
+}
