--- a/thesis/thesis.tex
+++ b/thesis/thesis.tex
@@ -2,6 +2,7 @@
 \usepackage{matharticle}
 \usepackage{graphtheory}
 \usepackage{flowchart}
+\usepackage{afterpage}
 \usepackage{url}
 \usetikzlibrary{arrows}
 \pagestyle{plain}
