--- a/thesis/theory.tex
+++ b/thesis/theory.tex
@@ -1152,6 +1152,7 @@ The degrees of the vertices in a graph and the number of edges in the graph are 
 Theorem of Graph Theory:
 
 \begin{theorem}[First Theorem of Graph Theory]
+  \label{thm:first}
   Let \(G\) be a graph of size \(m\):
   \[\sum_{v\in V(G)}\deg(v)=2m\]
 \end{theorem}
